# gccpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
bench/: CMakeLists.txt  allocation.cpp
cmake/: GoogleBenchmark.cmake  GoogleTest.cmake  Nanobench.cmake
example/: ManagedHashMap.h  UnmanagedHashMap.h
example/count/: ManagedHashMap.h  UnmanagedHashMap.h  count.cpp
lib/: Gc.cpp  Gc.h  ShadowStack.cpp  ShadowStack.h
lib/gc/: Allocator.cpp  Allocator.h  Frame.h  Gc.cpp  Gc.h  GcCollected.h  ShadowStack.cpp  ShadowStack.h
lib/gc/operations/: GCOperation.h  Mark.cpp  Mark.h  Sweep.cpp  Sweep.h
lib/header/: MarkWord.cpp  MarkWord.h
lib/meta/: ClassMeta.cpp  ClassMeta.h  ObjMeta.cpp  ObjMeta.h
lib/pointer/: GcPtr.cpp  GcPtr.h  GcRoot.cpp  GcRoot.h  ObjectPointer.h  PtrBase.cpp  PtrBase.h
src/: macros.h
src/gc/: Frame.h  GCCollected.h  GarbageCollected.h  Handle.cpp  Handle.h  MarkWord.h  ShadowStack.cpp  ShadowStack.h  fwd.h
src/gc/allocators/: Allocator.h  LinearAllocator.cpp  LinearAllocator.h  MallocBasedAllocator.cpp  MallocBasedAllocator.h  NaiveAllocator.cpp  NaiveAllocator.h  SemispacesAllocator.cpp  SemispacesAllocator.h
src/gc/allocators/details/: FixedSizeAllocator.h  LinearAllocator.cpp  LinearAllocator.h
src/gc/collectors/: BasicCollector.cpp  BasicCollector.h  GC.h  IncrementalMarkAndSweep.cpp  IncrementalMarkAndSweep.h  MarkAndCompactCollector.cpp  MarkAndCompactCollector.h  MarkAndSweepCollector.cpp  MarkAndSweepCollector.h
src/gc/containers/: Buffer.cpp  Buffer.h  Enviroment.cpp  Enviroment.h  Environment.cpp  Environment.h  GCTimeRecorder.h  GlobalCtx.cpp  GlobalCtx.h  Memory.h  Page.cpp  Page.h  ShadowStack.cpp  ShadowStack.h  SpinLock.h  ThreadLock.cpp  ThreadLock.h  ThreadSafepointState.cpp  ThreadSafepointState.h  ThreadsStacks.cpp  ThreadsStacks.h  WaitBarrier.h  Worker.cpp  Worker.h  WorkerState.h
src/gc/operations/: Compact.cpp  Compact.h  GCOperation.h  Mark.cpp  Mark.h  MarkIncrementally.cpp  MarkIncrementally.h  Reallocate.cpp  Reallocate.h  Relocate.cpp  Relocate.h  Sweep.cpp  Sweep.h  UpdateReference.cpp  UpdateReference.h  UpdateReferences.cpp  UpdateReferences.h
src/header/: MarkWord.h
src/pointer/: GcPtr.h  GcPtrImpl.h  GcRoot.h  Handle.cpp  Handle.h  ObjectPointer.h  Oop.h  Oop.inline.h
src/struct/: Array.h  Pair.h  SizeT.h  String.h  Vector.h
tests/: CMakeLists.txt  allocator_test.cpp  gc_multithread_test.cpp  gc_test.cpp  test.cpp
tests/src/: allocator_test.h  gc_multithread_test.h  gc_test.h  test_runner.cpp
tests/utils/: GCTest.h  Objects.cpp  Objects.h
